--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: HZW BLOG
 SEOTitle: HZW Blog
-header-img: 
+header-img: ""
 email: ryzuz39@gmail.com
 description: "SDN Web P4 "
 url: ""              # your host, for absolute URL
