--- a/_config.yml
+++ b/_config.yml
@@ -46,12 +46,12 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: 
 
 # Duoshuo settings
-duoshuo_username: huxblog
+duoshuo_username: 
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
