--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@ RSS: false
 #twitter_username:  huxpro
 # linkedin_username:  firstname-lastname-idxxxx
 
-
-
+github_username:superHzw
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
