--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: HZW BLOG
-SEOTitle: HZW Blog
+SEOTitle: superHzw
 header-img: img/home-bg.jpg
 email: ryzuz39@gmail.com
 description: "SDN Web P4 "
